End of contacts page

--- a/style.css
+++ b/style.css
@@ -305,10 +305,10 @@ ul a:hover{
     align-self: center;
     align-items: center;
     text-align: center;
-    width: 18rem;
+    width: 20.0rem;
     border: solid 1px;
     text-align: center;
-    height: 80%;
+    height: fit-content;
     margin: 0.5rem;
     backdrop-filter: blur(17px) saturate(65%);
     -webkit-backdrop-filter: blur(17px) saturate(65%);
@@ -316,9 +316,76 @@ ul a:hover{
     border-radius: 1rem;
     border: 1px solid rgba(255, 255, 255, 0.125);
     cursor: pointer;
+    padding: 0.5rem;
+    transition: ease;
+}
+
+.card h1{
+    color: rgba(75, 5, 5, 0.897);
+    width: 100%;
+    border-radius: 0.7rem 0.2rem;
+    margin: 0.2rem;
+    background-color: rgba(228, 228, 228, 0.589);
+}
+
+.card h3{
+    color: rgba(33, 46, 39, 0.952);
+    margin: 0.5rem;
+    font-size: 1.5rem;
+}
+
+.card ul{
+    list-style-type:circle;
+}
+
+.card ul li{
+    margin-left: 0;
+    font-size:1rem;
+    line-height: 2;
+    padding: 0.1rem; 
+    margin: 0.5rem; 
+    list-style-position: inside;
+    font-weight: 700;
+}
+
+.card h2{
+    color: rgba(216, 62, 16, 0.979);
+    padding: 0.5rem;
 }
 
 
-.Contact{
+
+.card button {
+    background: #3498db;
+    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+    background-image: -o-linear-gradient(top, #3498db, #2980b9);
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    -webkit-border-radius: 15;
+    -moz-border-radius: 15;
+    border-radius: 1rem;
+    font-family: Arial;
+    color: #ffff;
+    font-size: 1rempx;
+    padding: 1rem;
+    text-decoration: none;
+    cursor: grabbing;
+
+  }
+  
+  .card button:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #085080);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #085080);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #085080);
+    background-image: -o-linear-gradient(top, #3cb0fd, #085080);
+    background-image: linear-gradient(to bottom, #3cb0fd, #085080);
+    text-decoration: none;
+  }
+
+
+  .Contact{
     background: rgba(4, 111, 138, 0.76);
+    position: relative;
 }
