--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 
 .Home header{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-content: center;
     align-items: center;
     background: rgba(173, 177, 175, 0.26);
@@ -42,21 +42,28 @@
     position: fixed;
     width: 100%;
     z-index: 5;
+    position: relative;
     padding: 0 3rem 0 3rem;
 }
 
 header .logo{
     width: 20%;
     cursor: pointer;
+    position: absolute;
+    left: 5%;
 }
 
 header nav{
+    position: absolute;
     width: 30%;
+    justify-self:flex-end;
+    float: inline-end;
+    right: 5%;
 }
 header nav ul{
     list-style: none;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 
@@ -77,6 +84,20 @@ ul a:hover{
     font: 1.0rem 500;
 }
 
+.menu{
+    visibility: hidden; 
+    background-color: greenyellow;
+    background: url(./menu.svg);
+    width: 2rem;
+    height: 2rem;
+    margin: 0;
+    padding: 0.5rem;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    pointer-events: all;
+    cursor: pointer;
+}
 
 
 .Home .Intro{
@@ -367,14 +388,13 @@ ul a:hover{
     border-radius: 1rem;
     font-family: Arial;
     color: #ffff;
-    font-size: 1rempx;
+    font-size: 1rem;
     padding: 1rem;
     text-decoration: none;
     cursor: grabbing;
+}
 
-  }
-  
-  .card button:hover {
+.card button:hover {
     background: #3cb0fd;
     background-image: -webkit-linear-gradient(top, #3cb0fd, #085080);
     background-image: -moz-linear-gradient(top, #3cb0fd, #085080);
@@ -382,10 +402,587 @@ ul a:hover{
     background-image: -o-linear-gradient(top, #3cb0fd, #085080);
     background-image: linear-gradient(to bottom, #3cb0fd, #085080);
     text-decoration: none;
-  }
+}
 
 
-  .Contact{
+.Contact{
     background: rgba(4, 111, 138, 0.76);
     position: relative;
+    padding-top:15vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.Contact h4{
+    position: absolute;
+    top:10%;
+    left: auto;
+    font-size: 1.5rem;
+    text-decoration: aqua;
+}
+
+.Contact form{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    float: left;
+    left: 10%;
+    padding: 1rem;
+    width: 30%;
+    height: 80%;
+    max-height: fit-content;
+    backdrop-filter: blur(17px) saturate(65%);
+    -webkit-backdrop-filter: blur(17px) saturate(65%);
+    background-color: rgba(221, 225, 233, 0.37);
+    border-radius: 1rem;
+    border: 1px solid rgba(255, 255, 255, 0.164);
+    cursor: pointer;
+    padding: 0.5rem;
+}
+
+.Contact form label{
+    color:#1a0202e7;
+    font-size: 1.5rem;
+    padding: 0.5rem;
+}
+
+.Contact form input{
+    height: 2.5rem;
+    color: blue;
+    font-size: 1.3rem;
+    border: none;
+    padding: 0.5rem;
+    outline: none;
+    border-radius: 0.5rem;
+    text-align: center;
+    background-color: rgba(240, 255, 255, 0.781);
+}
+
+
+.Contact form textarea {
+    border-radius: 1rem;
+    padding: 1rem;
+    background-color: rgba(240, 255, 255, 0.781);
+}
+
+.Contact form button{
+    background: #3498db;
+    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+    background-image: -o-linear-gradient(top, #3498db, #2980b9);
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    -webkit-border-radius: 15;
+    -moz-border-radius: 15;
+    border-radius: 1rem;
+    font-family: Arial;
+    color: #ffff;
+    font-size: 1rempx;
+    padding: 1rem;
+    margin-top: 1rem;
+    text-decoration: none;
+    cursor:pointer;
+
+}
+
+.Contact form button:hover{
+    background: #1c9cf1;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #085080);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #085080);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #085080);
+    background-image: -o-linear-gradient(top, #3cb0fd, #085080);
+    background-image: linear-gradient(to bottom, #3cb0fd, #085080);
+    text-decoration: none;
+}
+
+.Contact .social{
+    position: absolute;
+    right: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.social a{
+    text-decoration: none;
+    margin: 0.5rem;
+    color: black;
+    font-size: 1.3rem;
+}
+
+
+
+/* medium screen displays */
+@media only screen and (max-width: 768px){
+
+    .body{
+        margin: 0.5rem;
+    }
+    
+    .Home header{
+        display: flex;
+        justify-content: space-between;
+        align-content: center;
+        align-items: center;
+        background: rgba(173, 177, 175, 0.26);
+        height: 10vh;
+        position: fixed;
+        width: 100%;
+        z-index: 5;
+        padding: 0 1.5rem 0 1.5rem;
+    }
+    
+    header .logo{
+        width: 20%;
+        cursor: pointer;
+    }
+    
+    header nav{
+        width: 40%;
+    }
+
+    
+    ul a{
+        text-decoration: none;
+        font-size: 1.2rem;
+    }
+    
+    .logo img{
+        max-height: 2.5rem;
+    }
+    
+    .Home .Intro{
+        position: absolute;
+        top: 15vh;
+        width: 70%;
+        border-radius: 1.2rem 0.8rem;
+        background-color: rgba(223, 238, 223, 0.226);
+        margin-left: 0.5rem;
+        padding: 0.75rem;
+    }
+    
+    .Intro h1{
+        font-size: 1.35rem;
+        line-height: 1.3;
+    }
+    
+    .Intro h2, .Intro h3{
+        line-height: 1.3;
+        font-size: 1.5rem;
+    }
+    
+    .Intro p{
+        line-height: 1.1;
+        font-size: 1.3rem;
+        font-weight: 300;   
+    }
+
+    .partners{
+        bottom: 5%;
+        width: 100%;
+    }
+
+    .slide{
+        margin-top: 2rem;
+        position: relative;
+    }
+    
+    .slide i{
+        font-size: 2rem;
+        animation: none;
+    }
+
+    .slide .ImageHolder{
+        max-width:90%;
+        height: 80%;
+        position: absolute;
+        box-shadow: 0 0.25rem 0.5rem 0.5rem rgb(53, 52, 52);
+    }
+    
+    .Services .card{
+        align-self: center;
+        align-items: center;
+        text-align: center;
+        width: 20%.0rem;
+        border: solid 1px whitesmoke;
+        text-align: center;
+        height: fit-content;
+        margin: 0.5rem;
+        backdrop-filter: blur(17px) saturate(65%);
+        -webkit-backdrop-filter: blur(17px) saturate(65%);
+        background-color: rgba(221, 225, 233, 0.322);
+        border-radius: 0.75rem;
+        border: 1px solid rgba(255, 255, 255, 0.125);
+        cursor: pointer;
+        padding: 0.5rem;
+        transition: ease;
+    }
+    
+    .card h1{
+        border-radius: 0.5rem 0.2rem;
+        font-size: 1.5rem;
+        margin: 0.2rem;
+    }
+    
+    .card h3{
+        color: rgba(33, 46, 39, 0.952);
+        margin: 0.25rem;
+        font-size: 1.2rem;
+    }
+    
+    .card ul li{
+        margin-left: 0;
+        font-size: 1rem;
+        line-height: 1.5;
+        padding: 0.1rem; 
+        margin: 0.25rem; 
+        list-style-position: inside;
+        font-weight: 700;
+    }
+    
+    .card h2{
+        padding: 0.3rem;
+    }
+    
+    .Contact h4{
+        position: absolute;
+        top:10%;
+        left: auto;
+        font-size: 1.3rem;
+        text-decoration: aqua;
+    }
+    
+    .Contact form{
+        float: left;
+        left: 5%;
+        width: 50%;
+        height: 80%;
+        padding: 0.25rem;
+        border-radius: 0.75rem 0.5rem;
+    }
+    
+    .Contact form label{
+        font-size: 1.2rem;
+        padding: 0.25rem;
+    }
+    
+    .Contact form input{
+        height: 2.0rem;
+        font-size: 1.0rem;
+        border: none;
+        padding: 0.25rem;
+        outline: none;
+        border-radius: 0.5rem;
+        width: 90%;
+        align-self: center;
+    }
+    
+    
+    
+    .Contact form button{
+        border-radius: 0.8rem 0.5rem;
+        border: none;
+        outline: none;
+        font-size: 1rem;
+    }
+    
+
+    .Contact .social{
+        position: absolute;
+        right: 2%;
+        height: 50%;
+    }
+    
+    .social a{
+        text-decoration: none;
+        margin: 0.25rem;
+        color: black;
+        font-size: 1.2rem;
+    }
+}
+
+
+/* small screen displays */
+@media only screen and (max-width: 450px){
+
+    .body{
+        margin: 0.3rem;
+    }
+
+    .container{
+        width: 100vw;
+        height: 100vh;
+    }
+
+    .Home{
+        display: flex;
+        position: relative;  
+        width: 100%;
+    }
+
+    header{
+        position: relative;
+    }
+    
+    
+    header .logo{
+        width: 10%;
+        cursor: pointer;
+    }
+    
+    .menu{
+        visibility: visible;
+        z-index: 10;
+        /* background-color: aqua; */
+        position: absolute;
+        right: 5%;
+    }
+
+    header nav{
+        position: absolute;
+        display: flex;
+        visibility: hidden;
+        flex-direction: column;
+        top: 10vh;
+        height: 30vh;
+        width: 100vw;
+        left: 0;
+        right: 0;
+        float: right;
+        border-radius: 0rem 1.2rem;
+        align-self: center;
+        text-align: center;
+        background: rgba(16, 5, 97, 0.842);
+        background: linear-gradient(45deg, rgba(16, 5, 97, 0.781) 0%, rgba(14,50,154,1) 35%, rgba(0,212,255,1) 100%);
+        transition: all linear ease;
+        
+    }
+
+    @keyframes Display {
+        0%{
+            width: 0vw;
+            opacity: 0;
+        }
+        20%{
+            width: 20vw;
+            opacity: 0.2;
+        }
+        40%{
+            width: 40vw;
+            opacity: 0.4;
+        }
+        60%{
+            width: 60vw;
+            opacity: 0.6;
+        }
+        80%{
+            width: 80vw;
+            opacity: 0.8;
+        }
+        100%{
+            width: 100vw;
+            opacity: 1;
+        }
+    }
+
+    nav.open{
+        visibility: visible;
+        animation: Display 1s linear;
+    }
+
+    nav ul{
+        display: flex;
+        flex-direction: column;
+        height: fit-content;
+        justify-content: space-around;
+        height: 100%;
+        width: 100vw;
+    }
+
+    
+    ul a{
+        text-decoration: none;
+        color: rgb(59, 36, 19);
+        font-size: 1.2rem;
+    }
+    
+    .logo img{
+        max-height: 2.5rem;
+    }
+    
+    
+    
+    .Home .Intro{
+        position: absolute;
+        top: 15vh;
+        width: 100%;
+        height: fit-content;
+        border-radius: 0.80rem 0.6rem;
+        background-color: rgba(223, 238, 223, 0.226);
+        margin-left: 0.5rem;
+        padding: 0.5rem;
+        text-align: center;
+    }
+    
+    .Intro h1{
+        font-size: 1.0rem;
+        line-height: 1.1;
+    }
+    
+    .Intro h2, .Intro h3{
+        line-height: 1.0;
+        font-size: 1.2rem;
+    }
+
+    .Intro button{
+        width: 5rem;
+        font-size: 1.3rem;
+        background-color: rgba(12, 144, 180, 0.822);
+        animation: none;
+        border-radius: 0.75rem 0;
+        box-shadow: none;
+        height: 2rem;
+        padding: 0;
+        margin: 0.2rem;
+    }
+    
+    .Intro p{
+        line-height: 1.1;
+        font-size: 1.3rem;
+        font-weight: 300;   
+    }
+
+    .partners{
+        position: absolute;
+        bottom: 5%;
+        width: 90%;
+        height: 5vh;
+        align-self: center;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .logohold{
+      height: 100%;
+      transition: ease;
+      animation: panimate 10s ease 1s  infinite ;
+    }
+
+
+    .Gallery{
+        align-content: center;
+        align-items: center;
+    }
+
+
+    .slide{
+        margin-top: 2rem;
+        position: relative;
+        width: 90vw;
+        align-content: center;
+        align-items: center;
+        align-self: center;
+        display: flex;
+        justify-content: center;
+        position: relative;
+    }
+    
+    .slide i{
+        font-size: 1.5rem;
+        animation: none;
+    }
+
+    .slide .ImageHolder{
+        max-width:100%;
+        height: 80%;
+        align-self: center;
+        position: absolute;
+        border: solid green;
+        box-shadow: none;
+        width: 100%;
+        margin: 0;
+        padding: 0%;
+        position: absolute;
+        left: 5%;
+        right: 0;
+    }
+    
+    .Services .card{
+        align-self: center;
+        align-items: center;
+        text-align: center;
+        width: 20%.0rem;
+        border: solid 1px whitesmoke;
+        text-align: center;
+        height: fit-content;
+        margin: 0.5rem;
+        backdrop-filter: blur(17px) saturate(65%);
+        -webkit-backdrop-filter: blur(17px) saturate(65%);
+        background-color: rgba(221, 225, 233, 0.322);
+        border-radius: 0.75rem;
+        border: 1px solid rgba(255, 255, 255, 0.125);
+        cursor: pointer;
+        padding: 0.5rem;
+        transition: ease;
+    }
+    
+    .card h1{
+        border-radius: 0.5rem 0.2rem;
+        font-size: 1.5rem;
+        margin: 0.2rem;
+    }
+    
+    .card h3{
+        color: rgba(33, 46, 39, 0.952);
+        margin: 0.25rem;
+        font-size: 1.2rem;
+    }
+    
+    .card ul li{
+        margin-left: 0;
+        font-size: 1rem;
+        line-height: 1.2;
+        padding: 0.1rem; 
+        margin: 0.15rem; 
+        list-style-position: inside;
+        font-weight: 700;
+    }
+    
+    .card h2{
+        padding: 0.3rem;
+    }
+
+    .Contact{
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        align-content: center;
+        text-align: center;
+        justify-content: space-evenly;
+        height: fit-content;
+        padding-top: 10vh;
+        margin-top: 0;
+    }
+
+    .Contact h4{
+        width: 100%;
+        font-size: 1.2rem;
+        position: unset;
+        margin: 0.5rem 0;
+    }
+
+    .Contact form{
+        width:90%;
+        position: unset;
+        margin: 1rem;
+    }
+
+
+    .Contact .social{
+        position: unset;
+        bottom: 0;
+        margin: 1rem;
+    }
 }
